--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ tokio = { version = "1", features = ["full"] }
 warp = "0.3"  # 用于创建 HTTP 服务
 prometheus = "0.13.4"
 log = "0.4.22"
- # Prometheus 客户端库
 env_logger = "0.10"  # 用于日志记录
 futures = "0.3"
+clap = "3.0"
