--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ env_logger = "0.10"  # 用于日志记录
 futures = "0.3"
 clap = "3.0"
 sysinfo = { version = "0.32.1"}
+serde_json = "1.0.133"
+serde = { version = "1.0.215", features = ["derive"] }
