--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,4 @@ log = "0.4.22"
 env_logger = "0.10"  # 用于日志记录
 futures = "0.3"
 clap = "3.0"
-sysinfo = { version = "0.32.1"}
-serde_json = "1.0.133"
-serde = { version = "1.0.215", features = ["derive"] }
+sysinfo = { version = "0.32.1", features = ["default", "disk", "network"] }
