--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,9 @@ env_logger = "0.10"  # 用于日志记录
 futures = "0.3"
 clap = "3.0"
 sysinfo = { version = "0.32.1", features = ["default", "disk", "network"] }
+multipart = "0.18"
+zip = "0.6"
+tar = "0.4"
+flate2 = "1.0"
+tempfile = "3.17.1"
+walkdir = "2.3"
