--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ sysinfo = { version = "0.32.1", features = ["default", "disk", "network"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
-reqwest = { version = "0.11", features = ["json"] }
+ureq = "2.0"
 regex = "1.5"
