--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,3 +1,4 @@
+configuration_service_url:
 log_level: ERROR
 system_processes:
   - "*WindowServer*"
@@ -5,3 +6,4 @@ system_processes:
   - "Google Chrome*"
   - "*clash-verge*"
   - "*idea*"
+detect_docker_processes: false
