--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,16 @@ log = "0.4.22"
 env_logger = "0.10"  # 用于日志记录
 futures = "0.3"
 clap = "3.0"
-sysinfo = { version = "0.33.1", features = ["default", "disk", "network"] }
+sysinfo = { version = "0.34.2", features = ["default", "disk", "network"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 ureq = "2.0"
 regex = "1.5"
+
+[profile.release]
+strip = "symbols"
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
